--- a/src/Components/Characters/characters.css
+++ b/src/Components/Characters/characters.css
@@ -1,4 +1,4 @@
-.up {
+.character {
   /* background: url("../../Assets/Images/darkbg.jpg") no-repeat; */
   /* background-size:cover; */
   background: #0f2027;
