--- a/src/Components/Onehouse/onehouse.css
+++ b/src/Components/Onehouse/onehouse.css
@@ -1,4 +1,4 @@
-#house {
+#onehouse {
   background: url("../../Assets/Images/bg2.jpg") no-repeat center center fixed;
   background-size: cover;
   font-family: blackadder;
@@ -53,7 +53,7 @@ h4{
   display: flex;
   justify-content: center;
 }
-.top {
+.onehouse{
   background: rgba(0, 0, 0, 0.893);
 }
 .info {
