--- a/src/Components/SortingHat/sort.css
+++ b/src/Components/SortingHat/sort.css
@@ -1,64 +1,158 @@
-.sort1{
-    display: flex;
-    justify-content:center;
-    /* align-items:center; */
+.sort1 {
+  display: flex;
+  justify-content: center;
 }
-.sort{
-    background:url('../../Assets/Images/bg2.jpg') no-repeat center center;
+
+.sort {
+  background: url("../../Assets/Images/darkbg.jpg") no-repeat;
+  background-size: cover;
+  height: 100vh;
+  overflow: hidden;
+}
+.field {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 15vw;
+  transition: 5s ease-in;
+}
+#standard-basic {
+  background: #fff;
+  /* color: #fff; */
+  margin-right: 2vh;
+  border-radius: 5px;
+  width: 35vh;
+}
+.button {
+  height: 7.3vh;
+  margin-left: 5vh;
+}
+.layer {
+  display: flex;
+  justify-content: center;
+}
+.line-1 {
+  position: relative;
+  top: 30%;
+  width: 24em;
+  margin: 0 auto;
+  border-right: 2px solid rgba(255, 255, 255, 0.75);
+  font-size: 180%;
+  text-align: center;
+  white-space: nowrap;
+  overflow: hidden;
+  transform: translateY(-50%);
+  color: #fff;
+}
+
+/* Animation */
+.anim-typewriter {
+  animation: typewriter 2.5s steps(44) 1s 1 normal both,
+    blinkTextCursor 500ms steps(44) infinite normal;
+}
+@keyframes typewriter {
+  from {
+    width: 0;
+  }
+  to {
+    width: 21em;
+  }
+}
+@keyframes blinkTextCursor {
+  from {
+    border-right-color: rgba(255, 255, 255, 0.75);
+  }
+  to {
+    border-right-color: transparent;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .sort {
+    background: url("../../Assets/Images/darkbg.jpg") no-repeat;
     background-size: cover;
-    height:100vh;
-    width:100vw;
-}
-.field{
-    display: flex;
-    justify-content:center;
-    align-items:center;
-    margin-top: 15vw;
-    transition: 5s ease-in;
-}
-#standard-basic{
-    background:#fff;
-    /* color: #fff; */
-    margin-right: 2vh;
-    border-radius:5px;
-    width: 35vh;
-}
-.button{
-    height: 7.3vh;
-    margin-left: 5vh;
-}
-.layer{
-    background:#0000007e;
-    height:100vh;
-    width:100vw;
-    display: flex;
-    justify-content:center
-}
-.line-1{
+    height: 100vh;
+    overflow: hidden;
+  }
+  .line-1 {
     position: relative;
-    top: 30%;  
+    top: 40%;
     width: 24em;
     margin: 0 auto;
-    border-right: 2px solid rgba(255,255,255,.75);
+    border-right: 2px solid rgba(255, 255, 255, 0.75);
     font-size: 180%;
     text-align: center;
     white-space: nowrap;
     overflow: hidden;
-    transform: translateY(-50%);    
-    color:#fff;
-
+    transform: translateY(-50%);
+    color: #fff;
+  }
+  .field {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 25vw;
+    transition: 5s ease-in;
+  }
 }
 
-/* Animation */
-.anim-typewriter{
-  animation: typewriter 2.5s steps(44) 1s 1 normal both,
-             blinkTextCursor 500ms steps(44) infinite normal;
-}
-@keyframes typewriter{
-  from{width: 0;}
-  to{width:21em;}
-}
-@keyframes blinkTextCursor{
-  from{border-right-color: rgba(255,255,255,.75);}
-  to{border-right-color: transparent;}
-}
+
+@media screen and (max-width: 600px) {
+    .sort {
+      background: url("../../Assets/Images/darkbg.jpg") no-repeat;
+      background-size: cover;
+      height: 100vh;
+      overflow: hidden;
+    }
+    .line-1 {
+      position: relative;
+      top: 50%;
+      width: 24em;
+      margin: 0 auto;
+      border-right: 2px solid rgba(255, 255, 255, 0.75);
+      font-size: 150%;
+      text-align: center;
+      white-space: nowrap;
+      overflow: hidden;
+      transform: translateY(-50%);
+      color: #fff;
+    }
+    .field {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-top: 25vw;
+      transition: 5s ease-in;
+    }
+  }
+  @media screen and (max-width: 500px) {
+    .sort {
+      background: url("../../Assets/Images/darkbg.jpg") no-repeat;
+      background-size: cover;
+      height: 100vh;
+      overflow: hidden;
+    }
+    .line-1 {
+      position: relative;
+      top: 60%;
+      width: 24em;
+      margin: 0 auto;
+      border-right: 2px solid rgba(255, 255, 255, 0.75);
+      font-size: 2.5vh;
+      text-align: center;
+      white-space: nowrap;
+      overflow: hidden;
+      transform: translateY(-50%);
+      color: #fff;
+      padding:4vh
+    }
+    .field {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-top: 29vw;
+      transition: 5s ease-in;
+    }
+  }
+  
+  
