--- a/src/Components/Details/details.css
+++ b/src/Components/Details/details.css
@@ -38,10 +38,15 @@
   height: 7vh;
   /* margin-top: 1vh; */
 }
-.start{
-    color: #dabc37;
+.start {
+  color: #dabc37;
 }
-
+.arrow1{
+  margin-left: 0vh;
+  margin-top: 5vh;
+  margin-bottom:3vh;
+  pointer:cursor;
+}
 .names {
   padding: 1vh;
   justify-content: left;
@@ -55,4 +60,41 @@
   padding: 0 2.7vh;
   /* background:#fffff; */
   color: #fff;
+}
+
+@media screen and (max-width: 600px) {
+  #img2 {
+    top: 20%;
+    width: 50vh;
+    height: 50vh;
+    margin-top: 20vh;
+    border-radius: 15px;
+    border: 5px double white;
+  }
+  #details {
+    overflow: hidden;
+    background: url("../../Assets/Images/darkbg.jpg") center no-repeat;
+  }
+  #top {
+    background: rgba(0, 0, 0, 0.6);
+  }
+  .data {
+    background: rgba(0, 0, 0, 0.2);
+  }
+  #info {
+    text-transform: capitalize;
+    text-align: left;
+    color: #fff;
+    font-family: blackadder;
+    font-size: 4vh;
+  }
+
+  .all {
+    height: 100vh;
+  }
+  .check {
+    padding: 0 2.7vh;
+    /* background:#fffff; */
+    color: #fff;
+  }
 }
