--- a/src/Components/Characters/characters.css
+++ b/src/Components/Characters/characters.css
@@ -24,8 +24,9 @@
   padding: 2vh;
 }
 .seconddiv h1 {
-  font-size: 2.7vh;
+  font-size: 4vh;
   color: #fff;
+  font-family: blackadder;
 }
 .col {
   /* background-color: rgba(255, 255, 255, 0.4); */
