--- a/src/Components/Houses/house.css
+++ b/src/Components/Houses/house.css
@@ -152,7 +152,7 @@ h4 {
     background-size: cover;
     height: 100vh;
     width: 100vw;
-    overflow: hidden;
+   /* overflow: hidden; */
   }
   .card {
     margin-left: 5vh;
@@ -193,7 +193,7 @@ h4 {
     height: 100vh;
     width: 100vw;
     background-size: cover;
-    overflow: hidden;
+   /* overflow: hidden; */
   }
   .card {
     margin-left: 22vh;
@@ -232,7 +232,7 @@ h4 {
     height: 100vh;
     width: 100vw;
     background-size: cover;
-    overflow: hidden;
+   /* overflow: hidden; */
   }
   .card {
     margin-left: 10vh;
