--- a/src/Components/Landing/landing.css
+++ b/src/Components/Landing/landing.css
@@ -1,5 +1,5 @@
 .magic {
-  overflow: hidden;
+ /* overflow: hidden; */
   background: url("../../Assets/Images/newbg.jpg") center center no-repeat;
   background-size: 100vw 100vh;
   height:100vh;
@@ -26,7 +26,7 @@ p {
     background-size: 100vw 130vw;
     height: 100vh;
     width: 100vw;
-    overflow: hidden;
+   /* overflow: hidden; */
   }
   .tsparticles{
     height: 90vh;
@@ -38,7 +38,7 @@ p {
     background-size: cover;
     height: 100vh;
     width: 100vw;
-    overflow: hidden;
+   /* overflow: hidden; */
   }
 }
 @media screen and (max-width: 600px) {
@@ -46,7 +46,7 @@ p {
     height: 100vh;
     width: 100vw;
     background-size: cover;
-    overflow: hidden;
+   /* overflow: hidden; */
   }
 }
 
@@ -55,6 +55,6 @@ p {
     height: 100vh;
     width: 100vw;
     background-size: cover;
-    overflow: hidden;
+   /* overflow: hidden; */
   }
 }
