--- a/src/Components/SortingHat/sort.css
+++ b/src/Components/SortingHat/sort.css
@@ -7,7 +7,8 @@
   background: url("../../Assets/Images/darkbg.jpg") no-repeat;
   background-size: cover;
   height: 100vh;
-  overflow: hidden;
+    /* overflow: hidden; */
+
 }
 .field {
   display: flex;
@@ -40,7 +41,8 @@
   font-size: 180%;
   text-align: center;
   white-space: nowrap;
-  overflow: hidden;
+    /* overflow: hidden; */
+
   transform: translateY(-50%);
   color: #fff;
 }
@@ -72,7 +74,8 @@
     background: url("../../Assets/Images/darkbg.jpg") no-repeat;
     background-size: cover;
     height: 100vh;
-    overflow: hidden;
+      /* overflow: hidden; */
+
   }
   .line-1 {
     position: relative;
@@ -83,7 +86,8 @@
     font-size: 180%;
     text-align: center;
     white-space: nowrap;
-    overflow: hidden;
+      /* overflow: hidden; */
+
     transform: translateY(-50%);
     color: #fff;
   }
@@ -102,7 +106,8 @@
       background: url("../../Assets/Images/darkbg.jpg") no-repeat;
       background-size: cover;
       height: 100vh;
-      overflow: hidden;
+        /* overflow: hidden; */
+
     }
     .line-1 {
       position: relative;
@@ -113,7 +118,8 @@
       font-size: 150%;
       text-align: center;
       white-space: nowrap;
-      overflow: hidden;
+        /* overflow: hidden; */
+
       transform: translateY(-50%);
       color: #fff;
     }
@@ -130,7 +136,8 @@
       background: url("../../Assets/Images/darkbg.jpg") no-repeat;
       background-size: cover;
       height: 100vh;
-      overflow: hidden;
+        /* overflow: hidden; */
+
     }
     .line-1 {
       position: relative;
@@ -141,7 +148,8 @@
       font-size: 2.5vh;
       text-align: center;
       white-space: nowrap;
-      overflow: hidden;
+        /* overflow: hidden; */
+
       transform: translateY(-50%);
       color: #fff;
       padding:4vh
