--- a/src/Components/Details/details.css
+++ b/src/Components/Details/details.css
@@ -12,7 +12,6 @@
 }
 #details {
   overflow: hidden; 
-  background: url("../../Assets/Images/darkbg.jpg") center no-repeat;
 }
 #top {
   background: rgba(0, 0, 0, 0.6);
@@ -60,7 +59,7 @@
   color: #fff;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 760px) {
   #img2 {
     top: 20%;
     width: 50vh;
@@ -70,14 +69,14 @@
     border: 5px double white;
   }
   #details {
-    /* overflow: hidden; */
-    background: url("../../Assets/Images/darkbg.jpg") center no-repeat;
+    overflow: visible;
+    background-size: 100vw 100vw;
   }
   #top {
-    background: rgba(0, 0, 0, 0.6);
+    background: rgba(0, 0, 0, 0);
   }
   .data {
-    background: rgba(0, 0, 0, 0.2);
+    background: rgba(0, 0, 0, 0);
   }
   #info {
     text-transform: capitalize;
@@ -85,6 +84,7 @@
     color: #fff;
     font-family: blackadder;
     font-size: 4vh;
+    margin-left: 7vh;
   }
 
   .all {
